--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
 click==7.1.2
+colorama==0.4.4
 Flask==1.1.2
 Flask-MySQL==1.5.2
 Flask-MySQLdb==0.2.0
+gunicorn==20.1.0
 itsdangerous==1.1.0
 Jinja2==2.11.3
 livereload==2.5.1
