--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ livereload==2.5.1
 MarkupSafe==1.1.1
 mysqlclient==2.0.3
 PyMySQL==1.0.2
+python-decouple==3.4
 six==1.16.0
 tornado==6.1
 Werkzeug==1.0.1
